@@ -1,19 +1,18 @@
 package TDUNU2025.Msbiblioteca.service.impl;
 
+import TDUNU2025.Msbiblioteca.exception.ResourceNotFoundException;
 import TDUNU2025.Msbiblioteca.model.entity.LibroCategoria;
 import TDUNU2025.Msbiblioteca.model.request.LibroCategoriaRequest;
 import TDUNU2025.Msbiblioteca.model.response.LibroCategoriaResponse;
 import TDUNU2025.Msbiblioteca.repository.LibroCategoriaRepository;
 import TDUNU2025.Msbiblioteca.service.LibroCategoriaService;
-
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class LibroCategoriaServiceImpl implements LibroCategoriaService {
@@ -23,26 +22,23 @@ public class LibroCategoriaServiceImpl implements LibroCategoriaService {
 
     @Override
     public List<LibroCategoriaResponse> listar() {
-        return repo.findAll()
-                .stream()
+        return repo.findAll().stream()
                 .map(item -> modelMapper.map(item, LibroCategoriaResponse.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public LibroCategoriaResponse obtener(Long id) {
         LibroCategoria entity = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Relación libro-categoría no encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("LibroCategoria", "id", id));
         return modelMapper.map(entity, LibroCategoriaResponse.class);
     }
 
     @Override
     public LibroCategoriaResponse registrar(LibroCategoriaRequest request) {
-
-        if (repo.existsByIdLibroAndIdCategoria(request.getIdLibro(), request.getIdCategoria())) {
+        if (repo.existsByLibro_IdLibroAndCategoriaLibro_IdCategoria(request.getIdLibro(), request.getIdCategoria())) {
             throw new RuntimeException("El libro ya está asignado a esta categoría");
         }
-
         LibroCategoria entity = modelMapper.map(request, LibroCategoria.class);
         LibroCategoria saved = repo.save(entity);
         return modelMapper.map(saved, LibroCategoriaResponse.class);
@@ -50,23 +46,21 @@ public class LibroCategoriaServiceImpl implements LibroCategoriaService {
 
     @Override
     public LibroCategoriaResponse actualizar(Long id, LibroCategoriaRequest request) {
-
         LibroCategoria entity = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Relación libro-categoría no encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("LibroCategoria", "id", id));
 
-        modelMapper.map(request, entity); // solo actualiza campos enviados
+        modelMapper.map(request, entity);
+        entity.setId(id); // Asegurar ID
+        
         LibroCategoria updated = repo.save(entity);
-
         return modelMapper.map(updated, LibroCategoriaResponse.class);
     }
 
     @Override
     public void eliminar(Long id) {
-
         if (!repo.existsById(id)) {
-            throw new RuntimeException("La relación libro-categoría no existe");
+            throw new ResourceNotFoundException("LibroCategoria", "id", id);
         }
-
         repo.deleteById(id);
     }
 }
