@@ -1,27 +1,18 @@
 package TDUNU2025.Msbiblioteca.service.impl;
 
-<<<<<<< HEAD
+import TDUNU2025.Msbiblioteca.exception.ResourceNotFoundException;
 import TDUNU2025.Msbiblioteca.model.entity.Libro;
-import TDUNU2025.Msbiblioteca.repository.LibroRepository;
-import TDUNU2025.Msbiblioteca.service.LibroService;
-=======
-import TDUNU2025.model.entity.Libro;
-import TDUNU2025.model.request.LibroRequest;
-import TDUNU2025.model.LibroResponse; // ← CORRECTO
-import TDUNU2025.repository.LibroRepository;
-import TDUNU2025.service.LibroService;
->>>>>>> origin/origin/jordinTrujillo
-
 import TDUNU2025.Msbiblioteca.model.request.LibroRequest;
 import TDUNU2025.Msbiblioteca.model.response.LibroResponse;
+import TDUNU2025.Msbiblioteca.repository.LibroRepository;
+import TDUNU2025.Msbiblioteca.service.LibroService;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class LibroServiceImpl implements LibroService {
@@ -31,58 +22,45 @@ public class LibroServiceImpl implements LibroService {
 
     @Override
     public List<LibroResponse> listar() {
-        return repo.findAll()
-                .stream()
+        return repo.findAll().stream()
                 .map(libro -> modelMapper.map(libro, LibroResponse.class))
-                .toList(); // Java 17+
+                .collect(Collectors.toList());
     }
 
     @Override
     public LibroResponse obtener(Long id) {
         Libro libro = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Libro no encontrado"));
-
+                .orElseThrow(() -> new ResourceNotFoundException("Libro", "id", id));
         return modelMapper.map(libro, LibroResponse.class);
     }
 
     @Override
     public LibroResponse registrar(LibroRequest request) {
-
         if (repo.existsByIsbn(request.getIsbn())) {
             throw new RuntimeException("El ISBN ya existe");
         }
-
-        // Request -> Entity
         Libro entity = modelMapper.map(request, Libro.class);
-
-        // Guardar
         Libro saved = repo.save(entity);
-
-        // Entity -> Response
         return modelMapper.map(saved, LibroResponse.class);
     }
 
     @Override
     public LibroResponse actualizar(Long id, LibroRequest request) {
-
         Libro libro = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Libro no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Libro", "id", id));
 
-        // Actualiza SOLO los campos del request
         modelMapper.map(request, libro);
-
+        libro.setIdLibro(id);
+        
         Libro updated = repo.save(libro);
-
         return modelMapper.map(updated, LibroResponse.class);
     }
 
     @Override
     public void eliminar(Long id) {
-
         if (!repo.existsById(id)) {
-            throw new RuntimeException("El libro no existe");
+            throw new ResourceNotFoundException("Libro", "id", id);
         }
-
         repo.deleteById(id);
     }
 }
