@@ -1,28 +1,19 @@
 package TDUNU2025.Msbiblioteca.service.impl;
-<<<<<<< HEAD
-=======
 
-import TDUNU2025.Msbiblioteca.model.entity.Multa;
-import TDUNU2025.Msbiblioteca.model.request.MultaRequest;
-import TDUNU2025.Msbiblioteca.model.response.MultaResponse;
-import TDUNU2025.Msbiblioteca.repository.MultaRepository;
-import TDUNU2025.Msbiblioteca.service.MultaService;
->>>>>>> origin/origin/jordinTrujillo
-
+import TDUNU2025.Msbiblioteca.exception.ResourceNotFoundException;
 import TDUNU2025.Msbiblioteca.model.entity.Multa;
 import TDUNU2025.Msbiblioteca.model.request.MultaRequest;
 import TDUNU2025.Msbiblioteca.model.response.MultaResponse;
 import TDUNU2025.Msbiblioteca.repository.MultaRepository;
 import TDUNU2025.Msbiblioteca.service.MultaService;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class MultaServiceImpl implements MultaService {
@@ -30,66 +21,50 @@ public class MultaServiceImpl implements MultaService {
     private final MultaRepository repo;
     private final ModelMapper modelMapper;
 
-    // ✅ LISTAR MULTAS
     @Override
     public List<MultaResponse> listar() {
-        return repo.findAll()
-                .stream()
+        return repo.findAll().stream()
                 .map(multa -> modelMapper.map(multa, MultaResponse.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // ✅ OBTENER MULTA POR ID (Integer, NO Long)
     @Override
-    public MultaResponse obtener(Integer id) {
+    public MultaResponse obtener(Long id) { // ID Long
         Multa multa = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Multa no encontrada"));
-
+                .orElseThrow(() -> new ResourceNotFoundException("Multa", "id", id));
         return modelMapper.map(multa, MultaResponse.class);
     }
 
-    // ✅ REGISTRAR MULTA (SIN diasRetraso del request)
     @Override
     public MultaResponse registrar(MultaRequest request) {
-
         Multa entity = modelMapper.map(request, Multa.class);
-
-        // ✅ Fecha automática
+        
+        // Lógica de negocio
         entity.setFechaGeneracion(LocalDate.now());
-
-        // ✅ Si no pagó aún
         entity.setFechaPago(null);
-
-        // ✅ Días de retraso inicial = 0
         entity.setDiasRetraso(0);
 
         Multa saved = repo.save(entity);
-
         return modelMapper.map(saved, MultaResponse.class);
     }
 
-    // ✅ ACTUALIZAR MULTA
     @Override
-    public MultaResponse actualizar(Integer id, MultaRequest request) {
-
+    public MultaResponse actualizar(Long id, MultaRequest request) { // ID Long
         Multa multa = repo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Multa no encontrada"));
+                .orElseThrow(() -> new ResourceNotFoundException("Multa", "id", id));
 
         modelMapper.map(request, multa);
+        multa.setIdMulta(id); // Asegurar ID
 
         Multa updated = repo.save(multa);
-
         return modelMapper.map(updated, MultaResponse.class);
     }
 
-    // ✅ ELIMINAR MULTA
     @Override
-    public void eliminar(Integer id) {
-
+    public void eliminar(Long id) { // ID Long
         if (!repo.existsById(id)) {
-            throw new RuntimeException("La multa no existe");
+            throw new ResourceNotFoundException("Multa", "id", id);
         }
-
         repo.deleteById(id);
     }
 }
